--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,14 @@ pytz==2018.4
 requests==2.20.1
 urllib3==1.22
 whitenoise==4.1.2
+
+google-api-python-client==1.7.7
+google-auth==1.6.2
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.2.0
+httplib2==0.12.0
+oauth2client==4.1.3
+uritemplate==3.0.0
+
+gspread==3.1.0
+gspread-dataframe==3.0.2
