--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Django==2.1
 django-heroku==0.3.1
 gunicorn==19.9.0
 idna==2.6
-psycopg2==2.7.5
+#psycopg2==2.7.5
 pytz==2018.4
 requests==2.20.1
 urllib3==1.22
