--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-heroku==0.3.1
 gunicorn==19.9.0
 idna==2.6
 #psycopg2==2.7.5
+psycopg2-binary==2.9.5
 pytz==2018.4
 requests==2.20.1
 urllib3==1.22
