--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ certifi==2018.4.16
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==2.1
-django-heroku==0.3.1
+#django-heroku==0.3.1
+django-on-heroku==1.1.2
 gunicorn==19.9.0
 idna==2.6
-#psycopg2==2.7.5
 whitenoise==4.1.2
 psycopg2-binary==2.9.5
 pytz==2018.4
