ci: update vercel type detects

--- a/web/vercel.json
+++ b/web/vercel.json
@@ -3,11 +3,6 @@
   "outputDirectory": "dist",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
-  "framework": "vite",
-  "functions": {
-    "api/**/*.ts": {
-      "runtime": "@vercel/node"
-    }
-  }
+  "framework": "vite"
 }
 
