--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,8 @@
     "date-fns": "^2.30.0",
     "react-datepicker": "^4.21.0",
     "googleapis": "^126.0.1",
-    "google-auth-library": "^9.4.0"
+    "google-auth-library": "^9.4.0",
+    "@vercel/node": "^3.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -24,7 +25,6 @@
     "@types/react-datepicker": "^4.19.4",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
-    "@vercel/node": "^3.0.7",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
