--- a/web/.gitignore
+++ b/web/.gitignore
@@ -12,6 +12,10 @@ dist
 dist-ssr
 *.local
 
+# Package manager lock files (use npm)
+pnpm-lock.yaml
+yarn.lock
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
